--- a/html/main.html
+++ b/html/main.html
@@ -49,7 +49,7 @@
     <main>
         <header class="header" id="header">
             <h1 class="titleheader" id="titleheader" onclick="clickedHeader()">Bob Lang Art</h1>
-            <div class="navigation" id="navigation">
+            <!--<div class="navigation" id="navigation">
                 <div class="navitem navhome" onclick="clickedHome()">
                     <p>Home</p>
                 </div>
@@ -59,7 +59,7 @@
                 <div class="navitem navabout" onclick="clickedAbout()">
                     <p>About</p>
                 </div>
-            </div>
+            </div>-->
         </header>
 
         <p class="welcomeheader"><i>Out of this world!</i></p>
