--- a/html/main.html
+++ b/html/main.html
@@ -21,7 +21,7 @@
     <div id="inquiry" class="inquiry">
         <h1>Inquiry Form</h1>
         <form method="post" action="https://api.web3forms.com/submit">
-            <input type="hidden" name="access_key" value="b3899408-8d4f-4503-98cc-7c84b5e28932" />
+            <input type="hidden" name="access_key" value="138a329d-77ec-486c-9c98-32c7da899235" />
             <input type="hidden" name="from_name" value="Art Inquiry" />
             <input type="hidden" name="redirect" value="https://web3forms.com/success" />
             <fieldset required>
@@ -66,36 +66,23 @@
         <p class="extrainfo">All art has been crafted by Bob</p>
         <h1 class="browsemess">Scroll down to browse the catalog. Click on a piece to examine.</h1>
         <div class="catalog">
-            <!--<img id="a1" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p1.jpg" alt="sleep">
-            <img id="a2" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p2.jpg" alt="sleep">
-            <img id="a3" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p3.jpg" alt="sleep">
-            <img id="a4" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p4.jpg" alt="sleep">
-            <img id="a5" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p5.jpg" alt="sleep">
-            <img id="a6" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p6.jpg" alt="sleep">
-            <img id="a7" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p7.jpg" alt="sleep">
-            <img id="a8" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p8.jpg" alt="sleep">
-            <img id="a9" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p9.jpg" alt="sleep">
-            <img id="a10" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p10.jpg" alt="sleep">
-            <img id="a11" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p0.jpg" alt="sleep">
-            -->
-            <img id="a1" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a2" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a3" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a4" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a5" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a6" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a7" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a8" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a9" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a10" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
-            <img id="a11" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\PlaceHolder1.jpg" alt="sleep">
+            <img id="a1" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p0.jpg" alt="sleep">
+            <img id="a2" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p1.jpg" alt="sleep">
+            <img id="a3" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p2.jpg" alt="sleep">
+            <img id="a4" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p3.jpg" alt="sleep">
+            <img id="a5" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p4.jpg" alt="sleep">
+            <img id="a6" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p5.jpg" alt="sleep">
+            <img id="a7" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p6.jpg" alt="sleep">
+            <img id="a8" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p7.jpg" alt="sleep">
+            <img id="a9" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p8.jpg" alt="sleep">
+            <img id="a10" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p9.jpg" alt="sleep">
+            <img id="a11" onclick="onArtClick(id)" onmouseover="onArtHover(id)" src="..\css\artimages\p10.jpg" alt="sleep">
         </div>
     </main>
     <hr class="bottom-line" />
     <footer onclick="openHtml("sdfsf")">
-        <p>copyright &copy; - <u>boblangart.com</u></p>
-        <p class="address">2934 Hero Drive - City, State 1234</p>
-        <p>(999)-999-9999</p>
+        <p>Copyright &copy; - <u>Blangart</u></p>
+        <p>Contact: blangartofficial@gmail.com</p>
     </footer>
 </body>
 </html>
